Add description, servings and calories

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -7,5 +7,11 @@
     <body>
         <h1>French Toast</h1>
         <img src="../images/french-toast.jpg" alt="A finished plate of french toast with syrup and butter">
+        <h2>Description</h2>
+        <p>There are many, fancy variations on this basic recipe. This easy recipe works with many types of bread—white, whole wheat, brioche, cinnamon-raisin, Italian, or French. Serve hot with butter or margarine and maple syrup.</p>
+        <ul>
+            <li>Servings Per Recipe: 3</li>
+            <li>Calories: 240.3</li>
+        </ul>
     </body>
 </html>
