--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
     <head>
         <meta charset="UTF-8">
         <title>French Toast</title>
@@ -12,6 +12,39 @@
         <ul>
             <li>Servings Per Recipe: 3</li>
             <li>Calories: 240.3</li>
+        </ul>
+        <h3>Ingredients</h3>
+        <ul>
+            <li><strong>White Bread</strong>
+                <ul>
+                    <li>Thick-cut bread is the base for all French toast. Sturdy, dense, slightly stale slices absorb the custard-like egg mixture better than thin, airy ones.</li>
+                </ul>
+            </li>
+            <li><strong>Eggs</strong>
+                <ul>
+                    <li>When it comes to French toast, eggs are essential. The proteins solidify once they're heated, which binds the batter together and ensures a rich texture. The fat, meanwhile, adds extra creaminess.</li>
+                </ul>
+            </li>
+            <li><strong>Milk</strong>
+                <ul>
+                    <li>You can technically use any liquid to make French toast, though milk is most popular. Not only does milk add the necessary moisture, but the fat gives the batter extra richness. This recipe calls for whole milk because it creates the ideal texture. You can easily substitute half-and-half, cream, or your favourite alternative milk – full-fat varieties will produce the creamiest consistency.</li>
+                </ul>
+            </li>
+            <li><strong>Vanilla and Cinnamon</strong>
+                <ul>
+                    <li>The best French toast is warm, cozy, aromatic, and sweet. The cinnamon and vanilla in this recipe are optional, but we definitely recommend using them for the most delicious experience. You could even add a little nutmeg or sugar if you feel like it.</li>
+                </ul>
+            </li>
+            <li><strong>Salt</strong>
+                <ul>
+                    <li>Don't skip the salt! Just a pinch won't affect the flavour. Salt helps break down the eggs, incorporate them into the batter, and prevents egg chunks in the finished product.</li>
+                </ul>
+            </li>
+            <li><strong>Butter</strong>
+                <ul>
+                    <li>Like so many of the most decadent foods, the best French toast is made with butter. If your French toast has the tendency to burn, try frying the batter-soaked bread in a combination of butter and oil.</li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
