--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/creamy-dill-chicken-and-mushrooms.html">Creamy Dill Chicken And Mushrooms</a>
+        <a href="./recipes/french-toast.html">French Toast</a>
+        <a href="./recipes/garlic-shrimp-pasta-bake.html">Garlic Shrimp Pasta Bake</a>
     </body>
 </html>
