--- a/recipes/garlic-shrimp-pasta-bake.html
+++ b/recipes/garlic-shrimp-pasta-bake.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Garlic Shrimp Pasta Bake</h1>
+        <img src="../images/garlic-shrimp-pasta-bake.jpg" alt="A finished creamy pasta dish topped with shrimp">
     </body>
 </html>
