--- a/recipes/garlic-shrimp-pasta-bake.html
+++ b/recipes/garlic-shrimp-pasta-bake.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Garlic Shrimp Pasta Bake</h1>
         <img src="../images/garlic-shrimp-pasta-bake.jpg" alt="A finished creamy pasta dish topped with shrimp">
+        <h2>Description</h2>
+        <p>This buttery garlic shrimp pasta bake is definitely a family pleasing meal idea that you should try!</p>
     </body>
 </html>
