Add servings and calories

--- a/recipes/garlic-shrimp-pasta-bake.html
+++ b/recipes/garlic-shrimp-pasta-bake.html
@@ -9,5 +9,9 @@
         <img src="../images/garlic-shrimp-pasta-bake.jpg" alt="A finished creamy pasta dish topped with shrimp">
         <h2>Description</h2>
         <p>This buttery garlic shrimp pasta bake is definitely a family pleasing meal idea that you should try!</p>
+        <ul>
+            <li>Servings Per Recipe: 6</li>
+            <li>Calories: 423.3</li>
+        </ul>
     </body>
 </html>
