--- a/recipes/creamy-dill-chicken-and-mushrooms.html
+++ b/recipes/creamy-dill-chicken-and-mushrooms.html
@@ -8,7 +8,7 @@
         <h1>Creamy Dill Chicken And Mushrooms</h1>
             <img src="../images/creamy-dill-chicken-and-mushrooms.jpg" alt="An image of chicken and mushrooms in a pan with a creamy sauce">
         <h2>Description</h2>
-            <p>A creamy chicken and mushrooms dish with a subtle flavour of dill. Perfect as a warm and comforting home meal after a long day. Super quick and easy to make with a delicious flavour without the hassle of complicated recipes</p>
+            <p>A creamy chicken and mushrooms dish with a subtle flavour of dill. Perfect as a warm and comforting home meal after a long day. Super quick and easy to make with a delicious flavour without the hassle of complicated recipes.</p>
             <ul>
                 <li>Servings Per Recipe: 4</li>
                 <li>Calories: 295.3</li>
