--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/creamy-dill-chicken-and-mushrooms.html">Creamy Dill Chicken And Mushrooms</a>
-        <a href="./recipes/french-toast.html">French Toast</a>
-        <a href="./recipes/garlic-shrimp-pasta-bake.html">Garlic Shrimp Pasta Bake</a>
+        <ul>
+            <li><a href="./recipes/creamy-dill-chicken-and-mushrooms.html">Creamy Dill Chicken And Mushrooms</a></li>
+            <li><a href="./recipes/french-toast.html">French Toast</a></li>
+            <li><a href="./recipes/garlic-shrimp-pasta-bake.html">Garlic Shrimp Pasta Bake</a></li>
+        </ul>
     </body>
 </html>
