Add return home link

--- a/recipes/creamy-dill-chicken-and-mushrooms.html
+++ b/recipes/creamy-dill-chicken-and-mushrooms.html
@@ -39,5 +39,6 @@
             <li>Place flour in a small bowl. Add a ladle of hot broth and whisk until smooth and no lumps remain. Pour mixture into the skillet and stir until well incorporated.</li>
             <li>Reduce heat to low and simmer until the sauce starts to thicken, 3 to 4 minutes. Taste and adjust seasoning and/or add additional dill if necessary.</li>
         </ol>
+        <a href="../index.html">Return home</a>
     </body>
 </html>
